--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/portfolio.css">
     <script src="https://kit.fontawesome.com/d2d33bd796.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css"> 
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
 </head>
 <body>
     <header class="header" id="header">
@@ -19,20 +19,20 @@
             <div class="nav_menu" id="nav-menu">
                 <ul class="nav_list grid">
                     <li class="nav_item">
-                        <a href="#home" class="nav_link"><i class="fa fa-home nav_icon" aria-hidden="true"></i>Home</a>
+                        <a href="#home" class="nav_link"><i class="fas fa-home-lg-alt"></i>Home</a>
                     </li>
                     <li class="nav_item">
-                        <a href="#about" class="nav_link"><i class="fa fa-user nav_icon" aria-hidden="true"></i>About</a>
+                        <a href="#about" class="nav_link"><i class="fas fa-user-alt"></i>About</a>
                     </li>
                     <li class="nav_item">
-                        <a href="#portfolio" class="nav_link"><i class="fa fa-briefcase nav_icon" aria-hidden="true"></i>Portfolio</a>
+                        <a href="#portfolio" class="nav_link"><i class="fas fa-briefcase"></i>Portfolio</a>
                     </li>
                 </ul>
-                <i class="fa fa-times nav_close d-lg-none" id="nav-close" aria-hidden="true"></i>
+                <i class="fas fa-times nav_close d-lg-none" id="nav-close"></i>
             </div>
             <div class="nav_btns">
                 <div class="nav_toggle d-lg-none" id="nav-toggle">
-                    <i class="fa fa-bars" aria-hidden="true"></i>
+                    <i class="fa fa-bars"></i>
                 </div>
             </div>
 
@@ -47,7 +47,7 @@
         <h3 class="section-subheader">I am Joshua Johnson.</h3>
         <p class="section-description">A frontend developer, sales expert and graphic designer</p>
         <a href="assets/Joshua's resume.pdf" download><button class="btn btn-home">Download CV
-            <i class="fa fa-download" aria-hidden="true"></i>
+            <i class="fas fa-download"></i>
         </button></a>
         </div>
         <div class="profile-img col-sm-12 col-lg-6">
@@ -74,7 +74,7 @@
         </div>
         <div class="info-btn">
             <button class="btn btn-home">Contact me
-                <i class="fa fa-envelope" aria-hidden="true"></i>
+                <i class="fas fa-envelope"></i>
             </button>
         </div>
     </div>
@@ -86,12 +86,12 @@
             <!-- ----EDUCATION AND WORK EXPERIENCE---- -->
             <div class="edu-exp">
                 <div class="edu-btn btn selected edu underline" data-target="#education">
-                    <i class="fa fa-graduation-cap exp-icon" aria-hidden="true"></i>
+                    <i class="fas fa-graduation-cap exp-icon"></i>
                     Education
                 </div>
 
                 <div class="edu-btn btn work" data-target="#work">
-                    <i class="fa fa-briefcase exp-icon" aria-hidden="true"></i>
+                    <i class="fas fa-briefcase exp-icon"></i>
                     Work
                 </div>
             </div>
@@ -390,7 +390,7 @@
     </section> <!-- -----END OF PORTFOLIO SECTION---- -->
     
     <script src="js/main.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js/jQuery v3.6.0.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
