--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="nav_menu" id="nav-menu">
                 <ul class="nav_list grid">
                     <li class="nav_item">
-                        <a href="#home" class="nav_link"><i class="fas fa-home-lg-alt"></i>Home</a>
+                        <a href="#home" class="nav_link"><i class="fas fa-home-alt"></i>Home</a>
                     </li>
                     <li class="nav_item">
                         <a href="#about" class="nav_link"><i class="fas fa-user-alt"></i>About</a>
