--- a/index.html
+++ b/index.html
@@ -227,10 +227,10 @@
                                   </h2>
                                   <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                     <div class="accordion-body row">
-                                        <div class="col-4 skill-icon"><i class="fa fa-calendar" aria-hidden="true"></i></div>
-                                        <div class="col-4 skill-icon"><i class="fa fa-calendar" aria-hidden="true"></i></div>
-                                        <div class="col-4 skill-icon"><i class="fa fa-calendar" aria-hidden="true"></i></div>
-                                        <div class="col-4 skill-icon"><i class="fa fa-calendar" aria-hidden="true"></i></div>
+                                        <div class="col-4 skill-icon"><i class="fab fa-html5"></i></div>
+                                        <div class="col-4 skill-icon"><i class="fab fa-css3"></i></div>
+                                        <div class="col-4 skill-icon"><i class="fab fa-js"></i></div>
+                                        <div class="col-4 skill-icon"><i class="fab fa-bootstrap"></i></div>
                                     </div>
                                   </div>
                                 </div>
