--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@
                 </div>
             </div> <!-- ---END OF GRAPHIC DESIGNER PORTFOLIO 4---- -->
             </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next d-none d-lg-block"></div>
+            <div class="swiper-button-prev d-none d-lg-block"></div>
             <div class="swiper-pagination"></div>
             </div> <!--END OF SWIPER CONTAINER FOR GRAPHIC DESIGNER PORTFOLIO -->
 
@@ -351,7 +351,7 @@
                      Officia rerum facilis sit optio maxime ducimus quos minus atque explicabo pariatur, 
                      iste velit consequuntur voluptatum. Ea repudiandae nobis quas consectetur suscipit.
                  </p>
-                 <a href="https://www.powtech.xyz" class="btn" target="_blank">View demo</a>
+                 <a href="https://www.powtech.xyz" class="btn" target="_blank">View demo<i class="fas fa-external-link"></i></a>
                  </div>
              </div> <!-- ---END OF FRONTEND DEVELOPER PORTFOLIO 1---- -->
  
@@ -364,7 +364,7 @@
                      Officia rerum facilis sit optio maxime ducimus quos minus atque explicabo pariatur, 
                      iste velit consequuntur voluptatum. Ea repudiandae nobis quas consectetur suscipit.
                  </p>
-                 <a href="https://leovihildo.github.io" class="btn" target="_blank">View demo</a>
+                 <a href="https://leovihildo.github.io" class="btn" target="_blank">View demo<i class="fas fa-external-link"></i></a>
                  </div>
              </div> <!-- ---END OF FRONTEND DEVELOPER PORTFOLIO 2---- -->
  
@@ -377,12 +377,12 @@
                      Officia rerum facilis sit optio maxime ducimus quos minus atque explicabo pariatur, 
                      iste velit consequuntur voluptatum. Ea repudiandae nobis quas consectetur suscipit.
                  </p>
-                 <a href="" class="btn" target="_blank">View demo</a>
+                 <a href="" class="btn" target="_blank">View demo<i class="fas fa-external-link"></i></a>
                  </div>
              </div> <!-- ---END OF FRONTEND DEVELOPER PORTFOLIO 3---- -->
              </div>
-             <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
+             <div class="swiper-button-next d-none d-lg-block"></div>
+            <div class="swiper-button-prev d-none d-lg-block"></div>
             <div class="swiper-pagination"></div>
             </div>
 
