--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                      Officia rerum facilis sit optio maxime ducimus quos minus atque explicabo pariatur, 
                      iste velit consequuntur voluptatum. Ea repudiandae nobis quas consectetur suscipit.
                  </p>
-                 <a href="https://leovihildo.github.io" class="btn" target="_blank">View demo<i class="fas fa-external-link"></i></a>
+                 <a href="https://leovihildo.github.io/Holiday-planner" class="btn" target="_blank">View demo<i class="fas fa-external-link"></i></a>
                  </div>
              </div> <!-- ---END OF FRONTEND DEVELOPER PORTFOLIO 2---- -->
  
