--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="nav_menu" id="nav-menu">
                 <ul class="nav_list grid">
                     <li class="nav_item">
-                        <a href="#home" class="nav_link"><i class="fas fa-home-alt"></i>Home</a>
+                        <a href="#home" class="nav_link"><i class="fa fa-home-alt"></i>Home</a>
                     </li>
                     <li class="nav_item">
                         <a href="#about" class="nav_link"><i class="fas fa-user-alt"></i>About</a>
@@ -351,7 +351,8 @@
                      Officia rerum facilis sit optio maxime ducimus quos minus atque explicabo pariatur, 
                      iste velit consequuntur voluptatum. Ea repudiandae nobis quas consectetur suscipit.
                  </p>
-                 <a href="https://www.powtech.xyz" class="btn" target="_blank">View demo<i class="fas fa-external-link"></i></a>
+                 <a href="https://www.powtech.xyz" class="btn" target="_blank">View demo
+                 <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                  </div>
              </div> <!-- ---END OF FRONTEND DEVELOPER PORTFOLIO 1---- -->
  
@@ -364,7 +365,8 @@
                      Officia rerum facilis sit optio maxime ducimus quos minus atque explicabo pariatur, 
                      iste velit consequuntur voluptatum. Ea repudiandae nobis quas consectetur suscipit.
                  </p>
-                 <a href="https://leovihildo.github.io/Holiday-planner" class="btn" target="_blank">View demo<i class="fas fa-external-link"></i></a>
+                 <a href="https://leovihildo.github.io/Holiday-planner" class="btn" target="_blank">View demo
+                 <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                  </div>
              </div> <!-- ---END OF FRONTEND DEVELOPER PORTFOLIO 2---- -->
  
@@ -377,7 +379,8 @@
                      Officia rerum facilis sit optio maxime ducimus quos minus atque explicabo pariatur, 
                      iste velit consequuntur voluptatum. Ea repudiandae nobis quas consectetur suscipit.
                  </p>
-                 <a href="" class="btn" target="_blank">View demo<i class="fas fa-external-link"></i></a>
+                 <a href="" class="btn" target="_blank">View demo
+                 <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                  </div>
              </div> <!-- ---END OF FRONTEND DEVELOPER PORTFOLIO 3---- -->
              </div>
