--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                      iste velit consequuntur voluptatum. Ea repudiandae nobis quas consectetur suscipit.
                  </p>
                  <a href="https://www.powtech.xyz" class="btn" target="_blank">View demo
-                 <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                 <i class="fas fa-external-link"></i></a>
                  </div>
              </div> <!-- ---END OF FRONTEND DEVELOPER PORTFOLIO 1---- -->
  
@@ -366,7 +366,7 @@
                      iste velit consequuntur voluptatum. Ea repudiandae nobis quas consectetur suscipit.
                  </p>
                  <a href="https://leovihildo.github.io/Holiday-planner" class="btn" target="_blank">View demo
-                 <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                 <i class="fas fa-external-link"></i></a>
                  </div>
              </div> <!-- ---END OF FRONTEND DEVELOPER PORTFOLIO 2---- -->
  
@@ -380,7 +380,7 @@
                      iste velit consequuntur voluptatum. Ea repudiandae nobis quas consectetur suscipit.
                  </p>
                  <a href="" class="btn" target="_blank">View demo
-                 <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                 <i class="fas fa-external-link"></i></a>
                  </div>
              </div> <!-- ---END OF FRONTEND DEVELOPER PORTFOLIO 3---- -->
              </div>
