--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
     </div>
     </section>
-
+     <button type="button" id="btn-up"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
     <!-- ---ABOUT SECTION OF THE PAGE--- -->
     <section class="about-section section" id="about">
         <div class="container row">
