--- a/index.html
+++ b/index.html
@@ -351,10 +351,7 @@
                 <img src="images/Graphics/REA_1200.jpg" alt="REA-Schools-graphic-design" class="card-img-top">
                 <div class="card-body">
                 <h4 class="card-title">REA Flyer</h4>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Officia rerum facilis sit optio maxime ducimus quos minus atque explicabo pariatur, 
-                    iste velit consequuntur voluptatum. Ea repudiandae nobis quas consectetur suscipit.
-                </p>
+                <p class="card-text"><strong>Designed with:</strong> Adobe Illustrator and Canva.</p>
                 <a href="images/Graphics/REA_1200.jpg" class="btn" download>Download image</a>
                 </div>
             </div> <!-- ---END OF GRAPHIC DESIGNER PORTFOLIO 1---- -->
@@ -364,9 +361,7 @@
                 <img src="images/Graphics/Spring_1200.jpg" alt="Spring-laundry-and-drycleaning-flyer" class="card-img-top">
                 <div class="card-body">
                 <h4 class="card-title">Spring Laundry and Drycleaning Services</h4>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Officia rerum facilis sit optio maxime ducimus quos minus atque explicabo pariatur, 
-                    iste velit consequuntur voluptatum. Ea repudiandae nobis quas consectetur suscipit.
+                <p class="card-text"><strong>Designed with:</strong>Canva.
                 </p>
                 <a href="images/Graphics/Spring_1200.jpg" class="btn" download>Download image</a>
                 </div>
@@ -377,10 +372,7 @@
                 <img src="images/Graphics/Lenascakes_1200.jpg" alt="Lenas-cakes-logo-brand" class="card-img-top">
                 <div class="card-body">
                 <h4 class="card-title">Lena&apos;s Cakes</h4>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Officia rerum facilis sit optio maxime ducimus quos minus atque explicabo pariatur, 
-                    iste velit consequuntur voluptatum. Ea repudiandae nobis quas consectetur suscipit.
-                </p>
+                <p class="card-text"><strong>Designed with:</strong> Adobe Illustrator, Photoshop and Canva.</p>
                 <a href="images/Graphics/Lenascakes_1200.jpg" class="btn" download>Download image</a>
                 </div>
             </div> <!-- ---END OF GRAPHIC DESIGNER PORTFOLIO 3---- -->
@@ -390,9 +382,7 @@
                 <img src="images/Graphics/Omono_1200.jpg" alt="Omono's-kitchen-graphic-design" class="card-img-top">
                 <div class="card-body">
                 <h4 class="card-title">Omono&apos;s Kitchen</h4>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Officia rerum facilis sit optio maxime ducimus quos minus atque explicabo pariatur, 
-                    iste velit consequuntur voluptatum. Ea repudiandae nobis quas consectetur suscipit.
+                <p class="card-text"><strong>Designed with:</strong> Adobe Illustrator and Photoshop.
                 </p>
                 <a href="images/Graphics/REA_1200.jpg" class="btn" download>Download image</a>
                 </div>
@@ -413,9 +403,7 @@
                  <img src="images/Frontend/myportfolio.png" alt="my-first-portfolio-website" class="card-img-top">
                  <div class="card-body">
                  <h4 class="card-title">My first portfolio website</h4>
-                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                     Officia rerum facilis sit optio maxime ducimus quos minus atque explicabo pariatur, 
-                     iste velit consequuntur voluptatum. Ea repudiandae nobis quas consectetur suscipit.
+                 <p class="card-text"><strong>Built with:</strong> HTML, CSS, Javacript and Bootstrap.
                  </p>
                  <a href="https://www.powtech.xyz" class="btn" target="_blank">View demo
                  <i class="icon fas fa-external-link"></i></a>
@@ -427,28 +415,13 @@
                  <img src="images/Frontend/hp_large.jpg" alt="holiday-planner-web-app" class="card-img-top">
                  <div class="card-body">
                  <h4 class="card-title">The Holiday Planner web app</h4>
-                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                     Officia rerum facilis sit optio maxime ducimus quos minus atque explicabo pariatur, 
-                     iste velit consequuntur voluptatum. Ea repudiandae nobis quas consectetur suscipit.
+                 <p class="card-text">A basic CRUD website that helps users create schedules during holidays.
+                 <strong>Built with:</strong> HTML, CSS, Javacript and Bootstrap.
                  </p>
                  <a href="https://leovihildo.github.io/Holiday-planner" class="btn" target="_blank">View demo
                  <i class="icon fas fa-external-link"></i></a>
                  </div>
              </div> <!-- ---END OF FRONTEND DEVELOPER PORTFOLIO 2---- -->
- 
-             <!-- FRONTEND DEVELOPER PORTFOLIO 3---- -->
-             <div class="card col-3 swiper-slide">
-                 <img src="images/Frontend/" alt="Lenas-cakes-logo-brand" class="card-img-top">
-                 <div class="card-body">
-                 <h4 class="card-title">Lena&apos;s Cakes</h4>
-                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                     Officia rerum facilis sit optio maxime ducimus quos minus atque explicabo pariatur, 
-                     iste velit consequuntur voluptatum. Ea repudiandae nobis quas consectetur suscipit.
-                 </p>
-                 <a href="" class="btn" target="_blank">View demo
-                 <i class="icon fas fa-external-link"></i></a>
-                 </div>
-             </div> <!-- ---END OF FRONTEND DEVELOPER PORTFOLIO 3---- -->
              </div>
              <div class="swiper-button-next d-none d-lg-block"></div>
             <div class="swiper-button-prev d-none d-lg-block"></div>
