--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <textarea id="floatingTextarea2" class="form-control" style="height: 130px;" required></textarea>
                     <label style="color: #000;" for="floatingTextarea2">write your message...</label>
                 </div>
-                <input type="hidden" name="_next" value="Thanks.html">
+                <input type="hidden" name="_next" value="https://leovihildo.github.io/myportfolio/Thanks.html">
                 <button id="email" type="submit" class="btn btn-success">Submit</button>
                 <button id="email" type="submit" class="btn btn-danger btn-close-form">Close</button>
             </form>
