--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
             <form action="https://formsubmit.co/johnsonp.joshua@yahoo.com" method="POST" class="row g-3">
                 <div class="col-md-6">
                     <label for="inputText4" class="form-label">Name</label>
-                    <input id="inputText4" type="text" class="form-control" placeholder="Your fullname">
+                    <input id="inputText4" type="text" name="name" class="form-control" placeholder="Your fullname">
                 </div>
                 <div class="col-md-6">
                     <label for="inputEmail4" class="form-label">Email</label>
-                    <input id="inputEmail4" type="email" class="form-control" placeholder="yourdomain@email.com" required>
+                    <input id="inputEmail4" type="email" name="email" class="form-control" placeholder="yourdomain@email.com" required>
                 </div>
                 <div class="col-12 form-floating">
-                    <textarea id="floatingTextarea2" class="form-control" style="height: 130px;" required></textarea>
+                    <textarea id="floatingTextarea2" name="message" class="form-control" style="height: 130px;" required></textarea>
                     <label style="color: #000;" for="floatingTextarea2">write your message...</label>
                 </div>
                 <input type="hidden" name="_next" value="https://leovihildo.github.io/myportfolio/Thanks.html">
