--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="nav_menu" id="nav-menu">
                 <ul class="nav_list grid">
                     <li class="nav_item">
-                        <a href="#home" class="nav_link"><i class="icon fa fa-home-alt"></i>Home</a>
+                        <a href="#home" class="nav_link"><i class="icon fas fa-home-alt"></i>Home</a>
                     </li>
                     <li class="nav_item">
                         <a href="#about" class="nav_link"><i class="icon fas fa-user-alt"></i>About</a>
@@ -342,7 +342,7 @@
         <div class="container row portfolio-container">
             <h2 class="section-header skills-section">Portfolio</h2>
             <!-- PORTFOLIO AS A GRAPHIC DESIGNER----- -->
-            <h3 class="section-subheader graphic-skill">As a graphic designer</h3>
+            <h3 class="section-subheader graphic-skill">As a Graphic designer</h3>
             <span class="arrow-down-one"><i class="icon fa fa-sort-desc arrow-down-one-icon" aria-hidden="true"></i></span>
             <div class="swiper mySwiper graphic-container"> <!--SWIPER CONTAINER FOR GRAPHIC DESIGNER PORTFOLIO -->
             <div class="swiper-wrapper">
@@ -416,7 +416,7 @@
                  <div class="card-body">
                  <h4 class="card-title">The Holiday Planner web app</h4>
                  <p class="card-text">A basic CRUD website that helps users create schedules during holidays.
-                 <strong>Built with:</strong> HTML, CSS, Javacript and Bootstrap.
+                 <strong><br>Built with:</strong> HTML, CSS, Javacript and Bootstrap.
                  </p>
                  <a href="https://leovihildo.github.io/Holiday-planner" class="btn" target="_blank">View demo
                  <i class="icon fas fa-external-link"></i></a>
