--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="nav_menu" id="nav-menu">
                 <ul class="nav_list grid">
                     <li class="nav_item">
-                        <a href="#home" class="nav_link"><i class="icon fas fa-home-alt"></i>Home</a>
+                        <a href="#home" class="nav_link"><i class="fas fa-home icon"></i>Home</a>
                     </li>
                     <li class="nav_item">
                         <a href="#about" class="nav_link"><i class="icon fas fa-user-alt"></i>About</a>
@@ -406,7 +406,7 @@
                  <p class="card-text"><strong>Built with:</strong> HTML, CSS, Javacript and Bootstrap.
                  </p>
                  <a href="https://www.powtech.xyz" class="btn" target="_blank">View demo
-                 <i class="icon fas fa-external-link"></i></a>
+                 <i class="far fa-external-link icon"></i></a>
                  </div>
              </div> <!-- ---END OF FRONTEND DEVELOPER PORTFOLIO 1---- -->
  
@@ -419,7 +419,7 @@
                  <strong><br>Built with:</strong> HTML, CSS, Javacript and Bootstrap.
                  </p>
                  <a href="https://leovihildo.github.io/Holiday-planner" class="btn" target="_blank">View demo
-                 <i class="icon fas fa-external-link"></i></a>
+                 <i class="fas fa-external-link icon"></i></a>
                  </div>
              </div> <!-- ---END OF FRONTEND DEVELOPER PORTFOLIO 2---- -->
              </div>
