--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="nav_menu" id="nav-menu">
                 <ul class="nav_list grid">
                     <li class="nav_item">
-                        <a href="#home" class="nav_link"><i class="fas fa-home icon"></i>Home</a>
+                        <a href="#home" class="nav_link"><i class="fa fa-home icon" aria-hidden="true"></i>Home</a>
                     </li>
                     <li class="nav_item">
                         <a href="#about" class="nav_link"><i class="icon fas fa-user-alt"></i>About</a>
