--- a/index.html
+++ b/index.html
@@ -310,10 +310,10 @@
                             <div class="skills-data">
                              <div class="skill">
                                  <h4 class="section-description skill-name">Canva</h4>
-                                 <!-- <span class="skills-num">80%</span> -->
+                                 <!-- <span class="skills-num">70%</span> -->
                              </div>
                              <div class="circular-progress">
-                                 <div class="skills-percentage-circle">80</div>
+                                 <div class="skills-percentage-circle">70</div>
                              </div>
                          </div>
                           <!-- ----END OF GRAPHIC DESIGNER SKILL 2---- -->
@@ -406,7 +406,7 @@
                  <p class="card-text"><strong>Built with:</strong> HTML, CSS, Javacript and Bootstrap.
                  </p>
                  <a href="https://www.powtech.xyz" class="btn" target="_blank">View demo
-                 <i class="far fa-external-link icon"></i></a>
+                 <i class="fa fa-external-link icon" aria-hidden="true"></i></a>
                  </div>
              </div> <!-- ---END OF FRONTEND DEVELOPER PORTFOLIO 1---- -->
  
@@ -419,7 +419,7 @@
                  <strong><br>Built with:</strong> HTML, CSS, Javacript and Bootstrap.
                  </p>
                  <a href="https://leovihildo.github.io/Holiday-planner" class="btn" target="_blank">View demo
-                 <i class="fas fa-external-link icon"></i></a>
+                 <i class="fa fa-external-link icon" aria-hidden="true"></i></a>
                  </div>
              </div> <!-- ---END OF FRONTEND DEVELOPER PORTFOLIO 2---- -->
              </div>
