--- a/index.html
+++ b/index.html
@@ -348,45 +348,56 @@
             <div class="swiper-wrapper">
             <!-- GRAPHIC DESINGER PORTFOLIO 1---- -->
             <div class="card col-3 swiper-slide" style="width: 20rem;">
-                <img src="images/Graphics/REA_1200.jpg" alt="REA-Schools-graphic-design" class="card-img-top">
+                <img src="images/Graphics/REA_flyer.png" alt="REA-Schools-graphic-design" class="card-img-top">
                 <div class="card-body">
                 <h4 class="card-title">REA Flyer</h4>
                 <p class="card-text"><strong>Designed with:</strong> Adobe Illustrator and Canva.</p>
-                <a href="images/Graphics/REA_1200.jpg" class="btn" download>Download image</a>
+                <a href="images/Graphics/REA_flyer.png" class="btn" download>Download image</a>
                 </div>
             </div> <!-- ---END OF GRAPHIC DESIGNER PORTFOLIO 1---- -->
 
             <!-- GRAPHIC DESINGER PORTFOLIO 2---- -->
             <div class="card col-3 swiper-slide" style="width: 20rem;">
-                <img src="images/Graphics/Spring_1200.jpg" alt="Spring-laundry-and-drycleaning-flyer" class="card-img-top">
+                <img src="images/Graphics/Spring_flyer.png" alt="Spring-laundry-and-drycleaning-flyer" class="card-img-top">
                 <div class="card-body">
                 <h4 class="card-title">Spring Laundry and Drycleaning Services</h4>
                 <p class="card-text"><strong>Designed with:</strong> Canva.
                 </p>
-                <a href="images/Graphics/Spring_1200.jpg" class="btn" download>Download image</a>
+                <a href="images/Graphics/Spring_flyer.png" class="btn" download>Download image</a>
                 </div>
             </div> <!-- ---END OF GRAPHIC DESIGNER PORTFOLIO 2---- -->
 
             <!-- GRAPHIC DESINGER PORTFOLIO 3---- -->
             <div class="card col-3 swiper-slide" style="width: 20rem;">
-                <img src="images/Graphics/Lenascakes_1200.jpg" alt="Lenas-cakes-logo-brand" class="card-img-top">
+                <img src="images/Graphics/Lena's_mockup.png" alt="Lenas-cakes-logo-brand" class="card-img-top">
                 <div class="card-body">
-                <h4 class="card-title">Lena&apos;s Cakes</h4>
+                <h4 class="card-title">Mockup design for Lena&apos;s Cakes</h4>
                 <p class="card-text"><strong>Designed with:</strong> Adobe Illustrator, Photoshop and Canva.</p>
-                <a href="images/Graphics/Lenascakes_1200.jpg" class="btn" download>Download image</a>
+                <a href="images/Graphics/Lena's_mockup.png" class="btn" download>Download image</a>
                 </div>
             </div> <!-- ---END OF GRAPHIC DESIGNER PORTFOLIO 3---- -->
             
              <!-- GRAPHIC DESINGER PORTFOLIO 4---- -->
              <div class="card col-3 swiper-slide" style="width: 20rem;">
-                <img src="images/Graphics/Omono_1200.jpg" alt="Omono's-kitchen-graphic-design" class="card-img-top">
+                <img src="images/Graphics/Omonos2_1.png" alt="Omono's-kitchen-graphic-design" class="card-img-top">
                 <div class="card-body">
                 <h4 class="card-title">Omono&apos;s Kitchen</h4>
                 <p class="card-text"><strong>Designed with:</strong> Adobe Illustrator and Photoshop.
                 </p>
-                <a href="images/Graphics/REA_1200.jpg" class="btn" download>Download image</a>
+                <a href="images/Graphics/Omonos2_1.png" class="btn" download>Download image</a>
                 </div>
             </div> <!-- ---END OF GRAPHIC DESIGNER PORTFOLIO 4---- -->
+
+          <!-- GRAPHIC DESINGER PORTFOLIO 5---- -->
+             <div class="card col-3 swiper-slide" style="width: 20rem;">
+                <img src="images/Graphics/RMcube_logo.png" alt="Omono's-kitchen-graphic-design" class="card-img-top">
+                <div class="card-body">
+                <h4 class="card-title">Logo design for RM³ footies</h4>
+                <p class="card-text"><strong>Designed with:</strong> Adobe Illustrator and Photoshop.
+                </p>
+                <a href="images/Graphics/RMcube_logo.png" class="btn" download>Download image</a>
+                </div>
+            </div> <!-- ---END OF GRAPHIC DESIGNER PORTFOLIO 5---- -->
             </div>
             <div class="swiper-button-next d-none d-lg-block"></div>
             <div class="swiper-button-prev d-none d-lg-block"></div>
