--- a/index.html
+++ b/index.html
@@ -429,11 +429,25 @@
                  <p class="card-text">A basic CRUD website that helps users create schedules during holidays.
                  <strong><br>Built with:</strong> HTML, CSS, Javacript and Bootstrap.
                  </p>
-                 <a href="https://leovihildo.github.io/Holiday-planner" class="btn" target="_blank">View demo
+                 <a href="https://leovihildo.github.io/Holiday-planner/" class="btn" target="_blank">View demo
                  <i class="fa fa-external-link icon" aria-hidden="true"></i></a>
                  </div>
              </div> <!-- ---END OF FRONTEND DEVELOPER PORTFOLIO 2---- -->
+
+            <!-- FRONTEND DEVELOPER PORTFOLIO 3---- -->
+             <div class="card col-3 swiper-slide">
+                 <img src="images/Frontend/music_player.jpg" alt="music-player-web-app" class="card-img-top">
+                 <div class="card-body">
+                 <h4 class="card-title">Music Player</h4>
+                 <p class="card-text">A simple music player user interface.
+                 <strong><br>Built with:</strong> HTML, CSS, Javacript and Bootstrap.
+                 </p>
+                 <a href="https://leovihildo.github.io/music-player/" class="btn" target="_blank">View demo
+                 <i class="fa fa-external-link icon" aria-hidden="true"></i></a>
+                 </div>
+             </div> <!-- ---END OF FRONTEND DEVELOPER PORTFOLIO 3---- -->
              </div>
+
              <div class="swiper-button-next d-none d-lg-block"></div>
             <div class="swiper-button-prev d-none d-lg-block"></div>
             <div class="swiper-pagination"></div>
