--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <i class="icon fas fa-download"></i>
         </button></a>
         </div>
+        <div class="home-container">
         <div class="profile-img col-sm-12 col-lg-6">
             <img src="images/profile-pic.png" alt="My-profile-picture">      
         </div>
@@ -73,6 +74,7 @@
             <button class="btn btn-home" id="contact">Contact me
                 <i class="icon fas fa-envelope"></i>
             </button>
+            </div>
             <div class="hidden-form">
             <form action="https://formsubmit.co/johnsonp.joshua@yahoo.com" method="POST" class="row g-3">
                 <div class="col-md-6">
