--- a/index.html
+++ b/index.html
@@ -448,6 +448,19 @@
                  <i class="fa fa-external-link icon" aria-hidden="true"></i></a>
                  </div>
              </div> <!-- ---END OF FRONTEND DEVELOPER PORTFOLIO 3---- -->
+
+           <!-- FRONTEND DEVELOPER PORTFOLIO 4---- -->
+             <div class="card col-3 swiper-slide">
+                 <img src="images/Frontend/Sdc-pp.jpg" alt="Shoesdotcom-shopping-website" class="card-img-top">
+                 <div class="card-body">
+                 <h4 class="card-title">Shoesdotcom</h4>
+                 <p class="card-text">Shop for the best shoes online on Shoesdotcom.
+                 <strong><br>Built with:</strong> HTML, CSS, Javacript and Bootstrap.
+                 </p>
+                 <a href="https://leovihildo.github.io/shoesdotcom/index.html" class="btn" target="_blank">View demo
+                 <i class="fa fa-external-link icon" aria-hidden="true"></i></a>
+                 </div>
+             </div> <!-- ---END OF FRONTEND DEVELOPER PORTFOLIO 4---- -->
              </div>
 
              <div class="swiper-button-next d-none d-lg-block"></div>
