--- a/index.html
+++ b/index.html
@@ -406,6 +406,26 @@
             <div class="swiper-pagination"></div>
             </div> <!--END OF SWIPER CONTAINER FOR GRAPHIC DESIGNER PORTFOLIO -->
 
+            <div thumbsSlider="" class="swiper mySwiper2">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <img src="images/Graphics/REA_flyer.png" />
+        </div>
+        <div class="swiper-slide">
+          <img src="images/Graphics/Spring_flyer.png" />
+        </div>
+        <div class="swiper-slide">
+          <img src="images/Graphics/Lena's_mockup.png" />
+        </div>
+        <div class="swiper-slide">
+          <img src="images/Graphics/Omonos_logo.png" />
+        </div>
+        <div class="swiper-slide">
+          <img src="images/Graphics/RMcube_logo.png" />
+        </div>
+        </div>
+        </div>
+
              <!-- PORTFOLIO AS A FRONTEND DEVELOPER----- -->
              <h3 class="section-subheader graphic-skill">As a Frontend developer</h3>
              <span class="arrow-down-two"><i class="icon fa fa-sort-desc arrow-down-two-icon" aria-hidden="true"></i></span>
