--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             <!-- PORTFOLIO AS A GRAPHIC DESIGNER----- -->
             <h3 class="section-subheader graphic-skill">As a Graphic designer</h3>
             <span class="arrow-down-one"><i class="icon fa fa-sort-desc arrow-down-one-icon" aria-hidden="true"></i></span>
-            <div class="swiper mySwiper graphic-container"> <!--SWIPER CONTAINER FOR GRAPHIC DESIGNER PORTFOLIO -->
+            <div class="swiper mySwiper1 graphic-container"> <!--SWIPER CONTAINER FOR GRAPHIC DESIGNER PORTFOLIO -->
             <div class="swiper-wrapper">
             <!-- GRAPHIC DESINGER PORTFOLIO 1---- -->
             <div class="card col-3 swiper-slide" style="width: 20rem;">
